[gd_scene load_steps=9 format=3 uid="uid://li6wgfyrfoku"]

[ext_resource type="Script" path="res://Script/InventorySlot.gd" id="1_dokyu"]
[ext_resource type="Texture2D" uid="uid://muqd0lpvrieh" path="res://Textures/Cube.png" id="1_sqd6r"]
[ext_resource type="FontFile" uid="uid://cmqgoydw4vvwu" path="res://Fonts/VarelaRound-Regular.ttf" id="2_w0jec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2y7nl"]
bg_color = Color(0.826466, 0.604294, 0.358821, 1)
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8dq4"]
bg_color = Color(0.934125, 0.766855, 0.592558, 1)
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="LabelSettings" id="LabelSettings_mbn7r"]
font = ExtResource("2_w0jec")
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_at2a0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wtdcr"]

[node name="InventorySlot" type="Control" node_paths=PackedStringArray("item_image", "item_quantity", "item_name", "item_type", "item_effect", "details_panel")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -1810.0
offset_bottom = -970.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dokyu")
item_image = NodePath("OuterBorder/InnerBorder/ItemImage")
item_quantity = NodePath("OuterBorder/InnerBorder/ItemQuantity")
item_name = NodePath("DetailsPanel/VSplitContainer/ItemName")
item_type = NodePath("DetailsPanel/VSplitContainer/ItemType")
item_effect = NodePath("DetailsPanel/VSplitContainer/ItemEffect")
details_panel = NodePath("DetailsPanel")

[node name="OuterBorder" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2y7nl")

[node name="InnerBorder" type="Panel" parent="OuterBorder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8dq4")

[node name="ItemImage" type="Sprite2D" parent="OuterBorder/InnerBorder"]
position = Vector2(46, 43)
scale = Vector2(0.305, 0.308)
texture = ExtResource("1_sqd6r")

[node name="ItemQuantity" type="Label" parent="OuterBorder/InnerBorder"]
visible = false
layout_mode = 0
offset_left = 87.0
offset_top = 17.0
offset_right = 144.0
offset_bottom = 74.0
text = "1"
label_settings = SubResource("LabelSettings_mbn7r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetailsPanel" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_top = 160.0
offset_right = 322.0
offset_bottom = 240.0

[node name="VSplitContainer" type="VBoxContainer" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ItemName" type="Label" parent="DetailsPanel/VSplitContainer"]
layout_mode = 2
text = "WHITE DEVELOPER CUBE"

[node name="ItemType" type="Label" parent="DetailsPanel/VSplitContainer"]
layout_mode = 2
text = "DEV ITEM"

[node name="ItemEffect" type="Label" parent="DetailsPanel/VSplitContainer"]
layout_mode = 2
text = "WITHOUT THIS THE GAME WILL CRASH"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_at2a0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_at2a0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_at2a0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wtdcr")

[connection signal="mouse_entered" from="OuterBorder" to="." method="_on_outer_border_mouse_entered"]
[connection signal="mouse_entered" from="OuterBorder/InnerBorder" to="." method="_on_inner_border_mouse_entered"]
[connection signal="mouse_exited" from="OuterBorder/InnerBorder" to="." method="_on_inner_border_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
